Add mouse effects with star particles and custom cursor

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,9 +8,10 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body> 
 
-   <div id="particles-js"></div>
+<body>
+
+  <div id="particles-js"></div>
   <!-- Header -->
   <header id="header">
     <div class="container">
@@ -43,20 +45,24 @@
         <div class="hero-text">
           <h1>Hello, I'm <span class="text-gradient">Devasheesh Vardiya</span></h1>
           <h2>Software Developer</h2>
-          <p>I am a passionate Software Developer, crafting scalable and efficient solutions with clean code. With expertise in full-stack development, I turn ideas into seamless digital experiences.</p>
+          <p>I am a passionate Software Developer, crafting scalable and efficient solutions with clean code. With
+            expertise in full-stack development, I turn ideas into seamless digital experiences.</p>
           <div class="hero-buttons">
             <a href="#projects" class="btn">View Projects</a>
             <a href="#contact" class="btn btn-outline">Contact Me</a>
           </div>
           <div class="social-links">
             <a href="https://github.com/devasheesh-07" title="GitHub"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/devasheesh-vardiya-0a805923b/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/devasheesh-vardiya-0a805923b/" title="LinkedIn"><i
+                class="fab fa-linkedin"></i></a>
             <a href="mailto:devasheeshvardiya@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
         <div class="hero-image">
-          <img src="https://images.pexels.com/photos/16129700/pexels-photo-16129700/free-photo-of-man-in-glasses-working-on-pc-at-table.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Devasheesh Vardiya">
+          <img
+            src="https://images.pexels.com/photos/16129700/pexels-photo-16129700/free-photo-of-man-in-glasses-working-on-pc-at-table.jpeg?auto=compress&cs=tinysrgb&w=600"
+            alt="Devasheesh Vardiya">
         </div>
       </div>
     </div>
@@ -68,7 +74,9 @@
       <h2 class="section-title">Technical Skills</h2>
       <div class="skills-container">
         <div class="skill-card">
-          <img src="https://cdn.iconscout.com/icon/free/png-256/free-html-5-logo-icon-download-in-svg-png-gif-file-formats--programming-langugae-language-pack-logos-icons-1175208.png" alt="HTML">
+          <img
+            src="https://cdn.iconscout.com/icon/free/png-256/free-html-5-logo-icon-download-in-svg-png-gif-file-formats--programming-langugae-language-pack-logos-icons-1175208.png"
+            alt="HTML">
           <span>HTML</span>
         </div>
         <div class="skill-card">
@@ -76,15 +84,21 @@
           <span>CSS</span>
         </div>
         <div class="skill-card">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1822px-ISO_C%2B%2B_Logo.svg.png" alt="C++">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1822px-ISO_C%2B%2B_Logo.svg.png"
+            alt="C++">
           <span>C++</span>
         </div>
         <div class="skill-card">
-          <img src="https://cdn3d.iconscout.com/3d/free/preview/free-python-3d-icon-download-in-png-blend-fbx-gltf-file-formats--pycharm-logo-programming-language-high-level-interpreted-coding-lang-pack-logos-icons-7578001.png?f=webp&h=700" alt="Python">
+          <img
+            src="https://cdn3d.iconscout.com/3d/free/preview/free-python-3d-icon-download-in-png-blend-fbx-gltf-file-formats--pycharm-logo-programming-language-high-level-interpreted-coding-lang-pack-logos-icons-7578001.png?f=webp&h=700"
+            alt="Python">
           <span>Python</span>
         </div>
         <div class="skill-card">
-          <img src="https://static.vecteezy.com/system/resources/thumbnails/036/044/336/small_2x/sql-database-icon-logo-design-ui-or-ux-app-png.png" alt="SQL">
+          <img
+            src="https://static.vecteezy.com/system/resources/thumbnails/036/044/336/small_2x/sql-database-icon-logo-design-ui-or-ux-app-png.png"
+            alt="SQL">
           <span>SQL</span>
         </div>
         <div class="skill-card">
@@ -118,7 +132,8 @@
           </div>
           <div class="project-content">
             <h3 class="project-title">Online Food Application</h3>
-            <p class="project-description">A full-stack food delivery application built with modern web technologies and responsive design.</p>
+            <p class="project-description">A full-stack food delivery application built with modern web technologies and
+              responsive design.</p>
             <div class="project-tags">
               <span class="project-tag">React</span>
               <span class="project-tag">Node.js</span>
@@ -137,7 +152,8 @@
           </div>
           <div class="project-content">
             <h3 class="project-title">Plant Disease Classifier</h3>
-            <p class="project-description">Machine learning application to detect plant diseases with high accuracy using image processing.</p>
+            <p class="project-description">Machine learning application to detect plant diseases with high accuracy
+              using image processing.</p>
             <div class="project-tags">
               <span class="project-tag">Python</span>
               <span class="project-tag">TensorFlow</span>
@@ -156,7 +172,8 @@
           </div>
           <div class="project-content">
             <h3 class="project-title">AI Chatbot</h3>
-            <p class="project-description">Intelligent chatbot using Dialogflow and LLM models for natural conversations and user assistance.</p>
+            <p class="project-description">Intelligent chatbot using Dialogflow and LLM models for natural conversations
+              and user assistance.</p>
             <div class="project-tags">
               <span class="project-tag">Dialogflow</span>
               <span class="project-tag">LLM</span>
@@ -220,12 +237,18 @@
       <h2 class="section-title">About Me</h2>
       <div class="about-container">
         <div class="about-image">
-          <img src="https://images.unsplash.com/photo-1581472723648-909f4851d4ae?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="About Me">
+          <img
+            src="https://images.unsplash.com/photo-1581472723648-909f4851d4ae?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="About Me">
         </div>
         <div class="about-content">
           <h2>Professional Software Developer</h2>
-          <p>I am a Software Developer passionate about building innovative, efficient, and scalable solutions. With a strong grasp of C++ and OOP principles, I develop robust software systems while specializing in MERN stack development using React, SQL, and MongoDB to create dynamic web applications.</p>
-          <p>My expertise extends to Machine Learning, where I built a Plant Disease Classifier, and AI-powered chatbots leveraging Dialogflow, LLM models, and Flask. With a solid foundation in software engineering, I focus on crafting intelligent, user-centric applications that solve real-world problems.</p>
+          <p>I am a Software Developer passionate about building innovative, efficient, and scalable solutions. With a
+            strong grasp of C++ and OOP principles, I develop robust software systems while specializing in MERN stack
+            development using React, SQL, and MongoDB to create dynamic web applications.</p>
+          <p>My expertise extends to Machine Learning, where I built a Plant Disease Classifier, and AI-powered chatbots
+            leveraging Dialogflow, LLM models, and Flask. With a solid foundation in software engineering, I focus on
+            crafting intelligent, user-centric applications that solve real-world problems.</p>
           <div class="about-stats">
             <div class="stat">
               <div class="stat-number">15+</div>
@@ -251,28 +274,49 @@
   </section>
 
   <!-- Contact Section -->
+  <!-- Contact Section -->
   <section id="contact" class="section">
     <div class="container">
       <h2 class="section-title">Get In Touch</h2>
       <div class="contact-container">
         <div class="contact-form">
-          <form id="contactForm">
+          <h3 style="margin-bottom: 20px; color: var(--primary);">Send me a message</h3>
+          <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
+            <!-- Web3Forms Configuration -->
+            <input type="hidden" name="access_key" value="9eec099e-6093-4504-b435-a6b53d9df4fc">
+            <input type="hidden" name="subject" value="New Message from Portfolio Contact Form">
+            <input type="hidden" name="from_name" value="Portfolio Website">
+            <input type="checkbox" name="botcheck" style="display: none;">
+
+            <!-- Redirect after success (optional) -->
+            <!-- <input type="hidden" name="redirect" value="https://web3forms.com/success"> -->
+
+            <!-- Form Fields -->
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Name" required>
+              <input type="text" name="name" class="form-control" placeholder="Your Full Name" required>
             </div>
             <div class="form-group">
-              <input type="email" class="form-control" placeholder="Your Email" required>
+              <input type="email" name="email" class="form-control" placeholder="Your Email Address" required>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Subject" required>
+              <input type="text" name="subject" class="form-control" placeholder="Message Subject" required>
             </div>
             <div class="form-group">
-              <textarea class="form-control" placeholder="Your Message" required></textarea>
+              <textarea name="message" class="form-control" placeholder="Your message here... (minimum 20 words)"
+                rows="5" required></textarea>
+              <small style="color: var(--text-muted); font-size: 0.8rem; margin-top: 5px; display: block;">
+                Minimum 20 words required
+              </small>
             </div>
-            <button type="submit" class="btn">Send Message</button>
+            <button type="submit" class="btn" style="width: 100%;">
+              <i class="fas fa-paper-plane"></i> Send Message
+            </button>
           </form>
+          <div id="form-status" style="margin-top: 15px; text-align: center; font-weight: 500;"></div>
         </div>
+
         <div class="contact-info">
+          <h3 style="margin-bottom: 20px; color: var(--primary);">Contact Information</h3>
           <div class="contact-item">
             <div class="contact-icon">
               <i class="fas fa-envelope"></i>
@@ -288,7 +332,7 @@
             </div>
             <div class="contact-details">
               <h3>Phone</h3>
-              <p>+91 2344328989</p>
+              <p>+91 6232369358</p>
             </div>
           </div>
           <div class="contact-item">
@@ -297,7 +341,7 @@
             </div>
             <div class="contact-details">
               <h3>Location</h3>
-              <p>Bhopal, Madhya Pradesh</p>
+              <p>Indore, Madhya Pradesh</p>
             </div>
           </div>
           <div class="contact-item">
@@ -320,10 +364,12 @@
       <div class="footer-content">
         <div class="footer-about">
           <div class="footer-logo">Deva<span>sheesh</span></div>
-          <p class="footer-text">Software Developer specializing in full-stack development, machine learning, and AI solutions. Crafting digital experiences that solve real-world problems.</p>
+          <p class="footer-text">Software Developer specializing in full-stack development, machine learning, and AI
+            solutions. Crafting digital experiences that solve real-world problems.</p>
           <div class="social-links">
             <a href="https://github.com/devasheesh-07" title="GitHub"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/devasheesh-vardiya-0a805923b/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/devasheesh-vardiya-0a805923b/" title="LinkedIn"><i
+                class="fab fa-linkedin"></i></a>
             <a href="mailto:devasheeshvardiya@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
           </div>
@@ -374,4 +420,5 @@
   <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
+
 </html>
