Add mouse effects with star particles and custom cursor

--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
   </section>
 
   <!-- Skills Section -->
+  <!-- Skills Section -->
   <section id="skills" class="section">
     <div class="container">
       <h2 class="section-title">Technical Skills</h2>
       <div class="skills-container">
+        <!-- Frontend Technologies -->
         <div class="skill-card">
           <img
             src="https://cdn.iconscout.com/icon/free/png-256/free-html-5-logo-icon-download-in-svg-png-gif-file-formats--programming-langugae-language-pack-logos-icons-1175208.png"
@@ -83,6 +85,13 @@
           <img src="https://cdn.worldvectorlogo.com/logos/css-3.svg" alt="CSS">
           <span>CSS</span>
         </div>
+
+        <div class="skill-card">
+          <img src="https://cdn-icons-png.flaticon.com/128/10828/10828578.png" alt="React.js">
+          <span>React.js</span>
+        </div>
+
+        <!-- Programming Languages -->
         <div class="skill-card">
           <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1822px-ISO_C%2B%2B_Logo.svg.png"
@@ -95,6 +104,25 @@
             alt="Python">
           <span>Python</span>
         </div>
+
+        <!-- Data Science & ML -->
+        <div class="skill-card">
+          <img src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png" alt="NumPy">
+          <span>NumPy</span>
+        </div>
+        <div class="skill-card">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Pandas_logo.svg/2560px-Pandas_logo.svg.png"
+            alt="Pandas">
+          <span>Pandas</span>
+        </div>
+
+
+        <!-- Backend & Databases -->
+        <div class="skill-card">
+          <img src="https://static-00.iconduck.com/assets.00/flask-icon-2048x1826-ith2z3y3.png" alt="Flask">
+          <span>Flask</span>
+        </div>
         <div class="skill-card">
           <img
             src="https://static.vecteezy.com/system/resources/thumbnails/036/044/336/small_2x/sql-database-icon-logo-design-ui-or-ux-app-png.png"
@@ -102,90 +130,281 @@
           <span>SQL</span>
         </div>
         <div class="skill-card">
-          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
-          <span>GitHub</span>
-        </div>
-        <div class="skill-card">
           <img src="https://www.svgrepo.com/show/331488/mongodb.svg" alt="MongoDB">
           <span>MongoDB</span>
         </div>
+
+        <!-- Tools & Platforms -->
         <div class="skill-card">
-          <img src="https://cdn-icons-png.flaticon.com/128/10828/10828578.png" alt="React.js">
-          <span>React.js</span>
+          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
+          <span>GitHub</span>
         </div>
         <div class="skill-card">
           <img src="https://cdn-icons-png.flaticon.com/512/906/906324.png" alt="Azure Cloud">
           <span>Azure Cloud</span>
         </div>
+
       </div>
+    </div>
+
+    <!-- Skills Categories -->
+    <div class="skills-categories">
+      <div class="category">
+        <h3>Frontend Development</h3>
+        <p>HTML, CSS, JavaScript, React.js</p>
+      </div>
+      <div class="category">
+        <h3>Backend Development</h3>
+        <p>Python, Flask, C++, SQL, MongoDB</p>
+      </div>
+      <div class="category">
+        <h3>Data Science & ML</h3>
+        <p>NumPy, Pandas, Scikit-learn</p>
+      </div>
+      <div class="category">
+        <h3>Tools & Platforms</h3>
+        <p>GitHub, Azure Cloud, Figma, Postman</p>
+      </div>
+    </div>
     </div>
   </section>
 
+  <!-- Projects Section -->
   <!-- Projects Section -->
   <section id="projects" class="section">
     <div class="container">
       <h2 class="section-title">Featured Projects</h2>
       <div class="projects-container">
+        <!-- Project 1: News Aggregator AI -->
+        <div class="project-card">
+          <div class="project-image">
+            <img src="./photos/Top-News-Aggregator-Websites-scaled.png" alt="News Aggregator AI">
+            <div class="project-overlay">
+              <div class="project-links">
+                <a href="#" class="project-link"><i class="fas fa-eye"></i></a>
+                <a href="https://github.com/yourusername/news-aggregator-ai" class="project-link" target="_blank"><i
+                    class="fas fa-code"></i></a>
+                <a href="https://news-aggregator-ai-demo.netlify.app" class="project-link" target="_blank"><i
+                    class="fas fa-external-link-alt"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="project-content">
+            <h3 class="project-title">News Aggregator AI</h3>
+            <p class="project-description">An intelligent news aggregation platform that summarizes articles, extracts
+              key insights, and provides Q&A based on content using advanced NLP and AI technologies.</p>
+            <div class="project-features">
+              <div class="feature">
+                <i class="fas fa-robot"></i>
+                <span>AI-Powered Summarization</span>
+              </div>
+              <div class="feature">
+                <i class="fas fa-comments"></i>
+                <span>Interactive Q&A Chatbot</span>
+              </div>
+              <div class="feature">
+                <i class="fas fa-bolt"></i>
+                <span>Real-time Processing</span>
+              </div>
+            </div>
+            <div class="project-tags">
+              <span class="project-tag">Python</span>
+              <span class="project-tag">Flask</span>
+              <span class="project-tag">NLP</span>
+              <span class="project-tag">Transformers</span>
+              <span class="project-tag">React</span>
+              <span class="project-tag">MongoDB</span>
+            </div>
+            <div class="project-actions">
+              <a href="#" class="btn btn-outline" data-project="news-aggregator">View Details</a>
+              <a href="https://news-aggregator-ai-demo.netlify.app" class="btn" target="_blank">Live Demo</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project 2: Online Food Application -->
         <div class="project-card">
           <div class="project-image">
             <img src="./photos/Screenshot (1111).png" alt="Online Food Application">
+            <div class="project-overlay">
+              <div class="project-links">
+                <a href="#" class="project-link"><i class="fas fa-eye"></i></a>
+                <a href="https://github.com/yourusername/food-delivery-app" class="project-link" target="_blank"><i
+                    class="fas fa-code"></i></a>
+                <a href="https://food-delivery-demo.herokuapp.com" class="project-link" target="_blank"><i
+                    class="fas fa-external-link-alt"></i></a>
+              </div>
+            </div>
           </div>
           <div class="project-content">
             <h3 class="project-title">Online Food Application</h3>
             <p class="project-description">A full-stack food delivery application built with modern web technologies and
-              responsive design.</p>
+              responsive design, featuring real-time order tracking and payment integration.</p>
+            <div class="project-features">
+              <div class="feature">
+                <i class="fas fa-shopping-cart"></i>
+                <span>E-commerce Platform</span>
+              </div>
+              <div class="feature">
+                <i class="fas fa-map-marker-alt"></i>
+                <span>Real-time Tracking</span>
+              </div>
+              <div class="feature">
+                <i class="fas fa-credit-card"></i>
+                <span>Payment Gateway</span>
+              </div>
+            </div>
             <div class="project-tags">
               <span class="project-tag">React</span>
               <span class="project-tag">Node.js</span>
               <span class="project-tag">MongoDB</span>
               <span class="project-tag">Express</span>
+              <span class="project-tag">Stripe API</span>
             </div>
             <div class="project-actions">
-              <a href="#" class="btn btn-outline">View Details</a>
-              <a href="#" class="btn">Live Demo</a>
+              <a href="#" class="btn btn-outline" data-project="food-app">View Details</a>
+              <a href="https://food-delivery-demo.herokuapp.com" class="btn" target="_blank">Live Demo</a>
             </div>
           </div>
         </div>
+
+        <!-- Project 3: Plant Disease Classifier -->
         <div class="project-card">
           <div class="project-image">
             <img src="./photos/pro2.jpg" alt="Plant Disease Classifier">
+            <div class="project-overlay">
+              <div class="project-links">
+                <a href="#" class="project-link"><i class="fas fa-eye"></i></a>
+                <a href="https://github.com/yourusername/plant-disease-classifier" class="project-link"
+                  target="_blank"><i class="fas fa-code"></i></a>
+                <a href="https://plant-disease-classifier.streamlit.app" class="project-link" target="_blank"><i
+                    class="fas fa-external-link-alt"></i></a>
+              </div>
+            </div>
           </div>
           <div class="project-content">
             <h3 class="project-title">Plant Disease Classifier</h3>
             <p class="project-description">Machine learning application to detect plant diseases with high accuracy
-              using image processing.</p>
+              using image processing and computer vision techniques.</p>
+            <div class="project-features">
+              <div class="feature">
+                <i class="fas fa-leaf"></i>
+                <span>Plant Health Analysis</span>
+              </div>
+              <div class="feature">
+                <i class="fas fa-camera"></i>
+                <span>Image Recognition</span>
+              </div>
+              <div class="feature">
+                <i class="fas fa-chart-line"></i>
+                <span>High Accuracy Model</span>
+              </div>
+            </div>
             <div class="project-tags">
               <span class="project-tag">Python</span>
               <span class="project-tag">TensorFlow</span>
               <span class="project-tag">OpenCV</span>
               <span class="project-tag">Flask</span>
+              <span class="project-tag">CNN</span>
             </div>
             <div class="project-actions">
-              <a href="#" class="btn btn-outline">View Details</a>
-              <a href="#" class="btn">Live Demo</a>
+              <a href="#" class="btn btn-outline" data-project="plant-disease">View Details</a>
+              <a href="https://plant-disease-classifier.streamlit.app" class="btn" target="_blank">Live Demo</a>
             </div>
           </div>
         </div>
+
+        <!-- Project 4: AI Chatbot -->
         <div class="project-card">
           <div class="project-image">
             <img src="./photos/pro3.png" alt="AI Chatbot">
+            <div class="project-overlay">
+              <div class="project-links">
+                <a href="#" class="project-link"><i class="fas fa-eye"></i></a>
+                <a href="https://github.com/yourusername/ai-chatbot" class="project-link" target="_blank"><i
+                    class="fas fa-code"></i></a>
+                <a href="https://ai-chatbot-demo.vercel.app" class="project-link" target="_blank"><i
+                    class="fas fa-external-link-alt"></i></a>
+              </div>
+            </div>
           </div>
           <div class="project-content">
             <h3 class="project-title">AI Chatbot</h3>
             <p class="project-description">Intelligent chatbot using Dialogflow and LLM models for natural conversations
-              and user assistance.</p>
+              and user assistance with contextual understanding.</p>
+            <div class="project-features">
+              <div class="feature">
+                <i class="fas fa-brain"></i>
+                <span>Natural Language Processing</span>
+              </div>
+              <div class="feature">
+                <i class="fas fa-comment-dots"></i>
+                <span>Contextual Conversations</span>
+              </div>
+              <div class="feature">
+                <i class="fas fa-plug"></i>
+                <span>Multi-platform Integration</span>
+              </div>
+            </div>
             <div class="project-tags">
               <span class="project-tag">Dialogflow</span>
               <span class="project-tag">LLM</span>
               <span class="project-tag">Flask</span>
               <span class="project-tag">JavaScript</span>
+              <span class="project-tag">WebSocket</span>
             </div>
             <div class="project-actions">
-              <a href="#" class="btn btn-outline">View Details</a>
-              <a href="#" class="btn">Live Demo</a>
+              <a href="#" class="btn btn-outline" data-project="ai-chatbot">View Details</a>
+              <a href="https://ai-chatbot-demo.vercel.app" class="btn" target="_blank">Live Demo</a>
             </div>
           </div>
         </div>
+
+        <!-- Project 5: E-Commerce Analytics Dashboard
+        <div class="project-card">
+          <div class="project-image">
+            <img src="./photos/analytics-dashboard.jpg" alt="E-Commerce Analytics Dashboard">
+            <div class="project-overlay">
+              <div class="project-links">
+                <a href="#" class="project-link"><i class="fas fa-eye"></i></a>
+                <a href="https://github.com/yourusername/ecommerce-analytics" class="project-link" target="_blank"><i
+                    class="fas fa-code"></i></a>
+                <a href="https://ecommerce-analytics-dashboard.netlify.app" class="project-link" target="_blank"><i
+                    class="fas fa-external-link-alt"></i></a>
+              </div>
+            </div> 
+          </div>
+          <div class="project-content">
+            <h3 class="project-title">E-Commerce Analytics Dashboard</h3>
+            <p class="project-description">Real-time analytics dashboard for e-commerce platforms with predictive
+              analytics, sales forecasting, and customer behavior insights.</p>
+            <div class="project-features">
+              <div class="feature">
+                <i class="fas fa-chart-bar"></i>
+                <span>Real-time Analytics</span>
+              </div>
+              <div class="feature">
+                <i class="fas fa-crystal-ball"></i>
+                <span>Predictive Forecasting</span>
+              </div>
+              <div class="feature">
+                <i class="fas fa-users"></i>
+                <span>Customer Insights</span>
+              </div>
+            </div>
+            <div class="project-tags">
+              <span class="project-tag">React</span>
+              <span class="project-tag">Python</span>
+              <span class="project-tag">D3.js</span>
+              <span class="project-tag">Pandas</span>
+              <span class="project-tag">FastAPI</span>
+            </div>
+            <div class="project-actions">
+              <a href="#" class="btn btn-outline" data-project="analytics-dashboard">View Details</a>
+              <a href="https://ecommerce-analytics-dashboard.netlify.app" class="btn" target="_blank">Live Demo</a>
+            </div>
+          </div>-->
+        </div> 
       </div>
     </div>
   </section>
@@ -224,7 +443,7 @@
           <h3>Problem Solving</h3>
         </div>
         <div class="cert-card" data-cert="photos/isro-cert.png">
-          <img src="https://upload.wikimedia.org/wikipedia/en/3/38/ISRO_logo.svg" alt="ISRO Course">
+          <img src="photos/Indian_Space_Research_Organisation_Logo.svg.png" alt="ISRO Course">
           <h3>ISRO Space Technology Course</h3>
         </div>
       </div>
